<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PololuUSBController</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_main_activity">Start</string>
    <string name="video_port_drone">Video port drone</string>
    <string name="command_port_drone">Command port drone</string>
    <string name="video_port_remote">Video port remote</string>
    <string name="command_port_remote">Command port remote</string>
    <string name="settings_title">Settings</string>
	<string name="ip_address">IP address</string>
	<string name="invert_controls">Switch Servo direction</string>
	<string name="time_between_screenshots">Time between screenshots (s)</string>
</resources>
